[project]
name = "caching-red"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "fastapi>=0.116.1",
    "fastapi-cache2>=0.2.2",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
